test/simple/correct/ShowString.hs
module ShowString where

main :: [Char] 
main = "hello, world"
