test/simple/typeerrors/Examples/ExprEnumThen.hs
module ExprEnumThen where

f = [ 13 , "aap" .. ]
